--- a/src/Components/Projects/Project.scss
+++ b/src/Components/Projects/Project.scss
@@ -7,29 +7,12 @@
 
 
   @include phone {
-    width: 90%;
-    
-
-  }
-  @include phone {
-      width: 90%;
-      
-  
-    }
-
-  @include tablet {
-   
- 
-  }
-
-  @include desktop {
-    
+    width: 100%;
+    padding: .5em;
   }
 }
 
-
 h2 {
-
   font-size: 2.2em;
 }
 
@@ -85,7 +68,7 @@ h2 {
     display: inline-block;
     margin-right: 2px;
     margin-bottom: 1em;
-    width: 400px;
+    // width: 400px;
 
     
     
